src/test/deca/syntax/invalid/divide_void_divide_int.deca
// Description :
// 
//      Test de programme syntaxiquement incorrect(non_respect des attentes à
//      gauche de l'opérateur /  avec un int à droite).
// 
// Résultats : 
// 
//       N/A
// 
// Historique : 
// 
//      Créé le 06/06/2023 par gl03

{
    int y=/ 3;
    print(y);
}